re PR c++/49369 (typeof() strips const from member when used in const method)

PR c++/49369
	* class.c (build_base_path): Fix cv-quals in unevaluated context.

From-SVN: r175059